Integrate Groq Llama 3 AI-powered algorithm recommender into teller simulator